[gd_scene load_steps=10 format=3 uid="uid://dcg061r3gc3c4"]

[ext_resource type="Script" uid="uid://dfjv378cf0pk0" path="res://ra.gd" id="1_02oe1"]
[ext_resource type="AudioStream" uid="uid://clgwqblicqt3n" path="res://generation/Wood Breaking Sound Effect.mp3" id="2_bbrk0"]
[ext_resource type="AudioStream" uid="uid://bd7okbb3xgmbx" path="res://assets/evils/Slow breathing sound effect.mp3" id="2_ctws7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1nx61"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_02oe1"]
radius = 152.315

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_02oe1"]
size = Vector2(26, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_bbrk0"]
radius = 18.0

[sub_resource type="Gradient" id="Gradient_ctws7"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.692771)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ctws7"]
gradient = SubResource("Gradient_ctws7")
width = 100
height = 100
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="RA" type="CharacterBody2D"]
script = ExtResource("1_02oe1")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 3
avoidance_enabled = true
radius = 25.62
avoidance_layers = 3
avoidance_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1nx61")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_02oe1")

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 3.14159

[node name="ColorRect" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("PlaceholderTexture2D_02oe1")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_bbrk0")

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ctws7")
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_bbrk0")
volume_db = -25.25

[node name="Timer3" type="Timer" parent="."]
one_shot = true

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(-2.26584, -1.37004)
blend_mode = 2
range_item_cull_mask = 2
shadow_enabled = true
shadow_item_cull_mask = 3
texture = SubResource("GradientTexture2D_ctws7")
texture_scale = 0.77

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
